--- a/client/src/App.css
+++ b/client/src/App.css
@@ -60,3 +60,8 @@ input:invalid[focused="true"] + .input3{
      padding: 6px 12px;
      cursor: pointer;
  }
+ .image-upload>input {
+     visibility: hidden;
+     width: 0;
+     height: 0
+ }
